2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kluge_for_3_ancestor_nodes): New method.
	(rebuild_ancestry): Call it.

2005-03-03  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Print a warning to let the
	user know why things like 'pull' can take so long.
	* netsync.cc: Remove a few tabs.

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	const char * const argv[]
	* unix/process.cc (process_spawn): Ditto.  Cast for call to
	execvp
	(existsonpath): Initialise args in a const way

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	char * const argv[]
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	* lua.cc (monotone_spawn_for_lua): Remove debug code
	* General: Beginning to hate C++'s const rules

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	const char * const *
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	* General: Sorry about all these commits, I'm syncing back and
	forth between Linux and Win32

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes char * const *
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	(existsonpath): argv now const char*[]

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc: Added forgotten file
	* unix/process.cc: Include stat.h, (process_*) fix compilation
	errors

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* unix/process.cc: Added forgotten file

2005-03-03  Jon Bright  <jon@siliconcircus.com>
	* lposix.c: Deleted
	* win32/process.cc: Created, added Win32 versions of functions
	existsonpath, make_executable, process_spawn, process_wait,
	process_kill, process_sleep
	* unix/process.cc: Ditto, for the Unix versions.
	* lua.cc: Add LUA wrappers for the above functions, register